--- a/css/custom.css
+++ b/css/custom.css
@@ -1,15 +1,109 @@
-.navbar{
-	background-color: #222222;
+* {
+	padding: 0;
+	margin: 0;
+}
+
+body {
+	overflow-x: hidden;
+	font-family: 'open sans', sans-serif;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+}
+li {
+	list-style: none;
+	display: inline-block;
+}
+a {
+	text-decoration: none;
+	transition: all 500ms ease-in-out;
+}
+a:hover
+a:active{
+	text-decoration: none;
+}
+
+h1, h2, h4{
 	font-family: 'PT Sans Narrow' , Arial, sans-serif;
+	text-transform: uppercase;
 	font-weight: 700;
 }
 
+p{
+	font-size: 15px;
+	line-height: 21px;
+}
+
+.btn{
+	transition: all 300ms ease-in-out;
+	font-weight: 500;
+	text-transform: uppercase;
+}
+.btn:hover {
+	background-color: #ededed
+	color: #3c3c3c;
+	border: 1px solid #fff
+}
+
+
+.navbar{
+	background: rgba(0,2,5,0.9);
+	font-family: 'PT Sans Narrow' , Arial, sans-serif;
+	font-weight: 700;
+	border: none;
+	
+}
+
 .navbar a{
-	color: white;
-	opacity: 0.9;
+	color: green;
+	opacity: 0.4;
 }
 
 .navbar a:hover{
 	opacity: 1;
-	background-color: #111111;
+	background-color: white;
+}
+
+/*Header*/
+
+.header{
+	height: 600px;
+	width: 100%;
+	padding: 80px 0 30px;
+	background-image: url(../images/headerbkground.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	color: #fff;
+
+}
+.header img{
+	height: 440px;
+	width: 280px;
+	margin: 70px 0 20px 100px;
+}
+
+.header h1,
+.header p,
+.header button {
+	margin-top: 30px;
+}
+
+.header h1{
+	font-size: 40px;
+	font-weight: 700;
+	padding-top: 0px;
+}
+
+@media(max-width: 768px) {
+
+	.header {
+		padding: 30px;
+		height: 750px;
+	}
+	.header img{ 
+		display: none;
+	}
+	.hearer h1{
+		margin-top: 20px;
+	}
 }
