--- a/css/custom.css
+++ b/css/custom.css
@@ -55,7 +55,7 @@ p{
 
 .navbar a{
 	color: green;
-	opacity: 0.4;
+	opacity: 0.9;
 }
 
 .navbar a:hover{
@@ -74,11 +74,12 @@ p{
 	background-repeat: no-repeat;
 	background-size: cover;
 	color: #fff;
+	background-attachment: fixed;
 
 }
 .header img{
 	height: 440px;
-	width: 280px;
+	width: 380px;
 	margin: 70px 0 20px 100px;
 }
 
@@ -94,16 +95,135 @@ p{
 	padding-top: 0px;
 }
 
-@media(max-width: 768px) {
+
+
+
+
+/*media queies*/
+
+@media(max-width: 990px) {
 
 	.header {
-		padding: 30px;
-		height: 750px;
+		padding: 20px;
+		height: 400px;
+		
+		
+		
 	}
 	.header img{ 
+		width: 90%
+		height: 300px;
 		display: none;
+		
 	}
-	.hearer h1{
+	.header h1 {
+		margin-top: 60px;
+		font-size: 20px;
+	}
+	.header h2 {
 		margin-top: 20px;
+		font-size: 20px;
+	}
+
+}
+
+@media(max-width: 640px) {
+
+	.header {
+		padding: 10px;
+		height: 520px;
+
+}
+.header p {
+	font-size: 10px;
+}
+
+.header .btn {
+	margin: 0 auto;
+}
+}
+
+/*History*/
+
+.history{
+	text-align: center;
+	padding: 60px 0 0px;
+	background-image: url("../images/history.jpg")
+	background-size: cover;
+	background-repeat: none;
+	}
+	.history a{
+		color: black;
+	}
+	 .history i:hover{
+		color: #323834;
+		padding-top: 20px;
+	}
+
+.history h1.
+.history h4{
+	color: #4c4c4c;
+	margin: 20px 0 20px;
+}
+
+.history p{
+	color: #737373;
+	font-size: 14px;
+	padding-bottom: 40px;
+}
+
+.history i{
+	height: 80px;
+	width: 80px;
+	font-size: 30px;
+	padding: 25px 20px;
+	border-radius: 50%;
+	background-color: #50e074;
+}
+
+@media(max-width: 960px) {
+
+	.history {
+		padding: 30px;
+	}
+	.history a{
+		text-decoration: none;
+	}
+}
+
+/*Attractions*/
+
+.attractions{
+padding: 20px 10px 20px 10px;
+text-align: center;
+
+}
+.attractions img{
+
+	height : 200px;
+	width: 360px;
+	opacity: 0.9;
+}
+.attractions h2{
+	padding-top: 20px;
+	
+}
+.attractions p{
+	padding-bottom: 20px;
+}
+.attractions img:hover{
+	opacity: 1;
+}
+
+iframe {
+	margin: 3em 0 0 0;
+	width: 100%;
+
+}
+
+@media(max-width: 720px){
+	
+	.attractions img{
+		max-width: 100%;
 	}
 }
